tests/snapshots/integration__integration_tests__merge__step_squash_no_verify.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - step
    - squash
    - "--no-verify"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_COMMIT_GENERATION__ARGS: "squash: combined commits"
    WORKTRUNK_COMMIT_GENERATION__COMMAND: echo
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
💡 [2mSkipping pre-commit hook ([90m--no-verify[39m)[22m
🔄 [36mSquashing 2 commits into a single commit [90m(3 files, [32m+3[39m[39m[90m)[39m...[39m
🔄 [36mGenerating squash commit message...[39m
💡 [2mUsing fallback commit message. Run [90mwt config --help[39m[2m for LLM setup guide[22m[22m
[107m [0m  [1mSquash commits from main[22m
[107m [0m  
[107m [0m  Combined commits:
[107m [0m  - feat: add file 1
[107m [0m  - feat: add file 2
✅ [32mSquashed @ [2m588aa53[22m[39m
